--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: A starting point for Dart libraries or applications.
 version: 0.0.1+1
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
-#  path: ^1.7.0
+  http: ^0.12.2
 
 dev_dependencies:
-  test: ^1.14.4
+  test: ^1.16.0-nullsafety.13
